add tab bar image assets and adjust map view for small screens

--- a/onTheMap/Base.lproj/Main.storyboard
+++ b/onTheMap/Base.lproj/Main.storyboard
@@ -238,34 +238,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="IGN-vq-uIi">
-                                <rect key="frame" x="0.0" y="84" width="375" height="563"/>
+                                <rect key="frame" x="48.5" y="177" width="278" height="312"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where are you studying today?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aFI-Ii-Q3d">
-                                        <rect key="frame" x="48.5" y="0.0" width="278" height="24"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="278" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Location Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wyx-Pi-K7f">
-                                        <rect key="frame" x="97" y="79" width="181" height="30"/>
+                                        <rect key="frame" x="48.5" y="44" width="181" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Rqt-DN-F6s"/>
+                                        </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" verticalHuggingPriority="300" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bUn-3P-8jL">
-                                        <rect key="frame" x="13.5" y="163.5" width="348" height="212"/>
+                                        <rect key="frame" x="64" y="94" width="150" height="100"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="212" id="QVH-lO-4iF"/>
-                                            <constraint firstAttribute="height" constant="212" id="ULc-4Q-MX3"/>
-                                            <constraint firstAttribute="width" constant="348" id="xMp-Ju-xFj"/>
+                                            <constraint firstAttribute="height" constant="100" id="Ns5-Tq-dxG"/>
+                                            <constraint firstAttribute="width" constant="150" id="qLF-Gx-xYD"/>
                                         </constraints>
                                     </mapView>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Off-eB-cYL">
-                                        <rect key="frame" x="169" y="430.5" width="37" height="37"/>
+                                        <rect key="frame" x="120.5" y="214" width="37" height="37"/>
                                         <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </activityIndicatorView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z4u-hh-g6U">
-                                        <rect key="frame" x="150" y="522" width="75" height="41"/>
+                                        <rect key="frame" x="101.5" y="271" width="75" height="41"/>
                                         <color key="backgroundColor" red="1" green="0.38250307430000002" blue="0.029188404330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <state key="normal" title="Search">
@@ -276,14 +278,15 @@
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="wyx-Pi-K7f" firstAttribute="top" secondItem="aFI-Ii-Q3d" secondAttribute="bottom" constant="20" id="Bns-Xm-Udc"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IGN-vq-uIi" firstAttribute="top" secondItem="2lr-17-nmK" secondAttribute="bottom" constant="20" id="MsE-1l-7P8"/>
-                            <constraint firstItem="xpQ-XN-zOQ" firstAttribute="top" secondItem="IGN-vq-uIi" secondAttribute="bottom" constant="20" id="SyV-nc-v98"/>
-                            <constraint firstItem="IGN-vq-uIi" firstAttribute="leading" secondItem="gjr-xH-J48" secondAttribute="leading" id="u1L-0d-WSp"/>
-                            <constraint firstAttribute="trailing" secondItem="IGN-vq-uIi" secondAttribute="trailing" id="u6e-wt-459"/>
+                            <constraint firstItem="IGN-vq-uIi" firstAttribute="centerY" secondItem="gjr-xH-J48" secondAttribute="centerY" id="JFq-7V-nyf"/>
+                            <constraint firstItem="IGN-vq-uIi" firstAttribute="centerX" secondItem="gjr-xH-J48" secondAttribute="centerX" id="j4v-iQ-ZXu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="1l5-vt-uFx">
@@ -309,7 +312,7 @@
         <scene sceneID="Zxp-ag-ewN">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uKj-lC-Qil" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Table" id="m5Y-Ra-m3g"/>
+                    <tabBarItem key="tabBarItem" title="Table" image="list" selectedImage="list" id="m5Y-Ra-m3g"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2lL-wE-K6w">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -328,7 +331,7 @@
         <scene sceneID="dPY-eP-tPl">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YJ7-6Y-URF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Map" id="4oS-pW-bMa"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="map" selectedImage="map" id="4oS-pW-bMa"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="BdC-QH-a5L">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -362,6 +365,10 @@
             <point key="canvasLocation" x="4013.5999999999999" y="933.28335832083962"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="list" width="32" height="32"/>
+        <image name="map" width="32" height="32"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4CJ-R3-XFh"/>
     </inferredMetricsTieBreakers>
